Fix scrollbar

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -10,9 +10,11 @@ $box_shadow_1: 0 0 30px 1px #00000048;
   --primary-color: #2fc686;
   --text-color: #0e0e10;
   --bg-color: #fafafa;
+  --scroller-color: #eaeaea;
 }
 :root[data-theme="dark"] {
   --primary-color: #2fc686;
   --text-color: #ececec;
   --bg-color: #0e0e10;
+  --scroller-color: #222224;
 }
