--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,23 +35,16 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 3px;
+  width: 8px;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: rgba($default, 0.4);
-}
-
-/* Handle */
 ::-webkit-scrollbar-thumb {
-  background: $default;
+  background-color: var(--scroller-color);
 }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: $default;
-}
+// ::-webkit-scrollbar-thumb:hover {
+//   background-color: lighten($default, 10);
+// }
 
 #root {
   display: flex;
